--- a/src/components/shop/cart-dropdown/cart-dropdown.styles.scss
+++ b/src/components/shop/cart-dropdown/cart-dropdown.styles.scss
@@ -1,6 +1,6 @@
 .cart-dropdown-container {
   position: absolute;
-  width: 300px;
+  width: 30a0px;
   height: 340px;
   display: flex;
   flex-direction: column;
